Hide overflow on svg, not marking surface Stops tool controls from being hidden near edges of the svg.

--- a/project.styl
+++ b/project.styl
@@ -28,7 +28,8 @@
     filter: none
   
   .marking-surface
-    overflow: hidden
+    svg
+      overflow: hidden
     
   .drawing-controls
     a
